--- a/MAI_TOOLBOX/MAI_TOOLBOX.vbproj
+++ b/MAI_TOOLBOX/MAI_TOOLBOX.vbproj
@@ -188,7 +188,7 @@
     <Compile Include="MAI-Toolbox\FRM_UNAME.vb">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="MAI-Toolbox\MAI-Teilenummer.vb" />
+    <Compile Include="MAI-Toolbox\MAI_Teilenummer.vb" />
     <Compile Include="MAI-Toolbox\MAITOOLS.vb" />
     <Compile Include="PMPHandler.vb">
       <SubType>Code</SubType>
