--- a/MAI_TOOLBOX/MAI_TOOLBOX.vbproj
+++ b/MAI_TOOLBOX/MAI_TOOLBOX.vbproj
@@ -221,6 +221,7 @@
     <Compile Include="MAI-Toolbox\FRM_Zylinderkonfig.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="MAI-Toolbox\HubEinstellen.vb" />
     <Compile Include="MAI-Toolbox\MAI_Teilenummer.vb" />
     <Compile Include="MAI-Toolbox\MAITOOLS.vb" />
     <Compile Include="MAI-Toolbox\Schutzzaun.vb" />
